# tarta-crust

./: README.md  dmarc  dpkg-linux-doc-strip-html  dpkg-no-mariadb-bullshit  gen-equiv-build-dep  prep-buildd  wkd
.config/htop/: htoprc-root.diff
dnsmasq-adblock/etc/cron.weekly/: dnsmasq-update-adblock-hosts
dnsmasq-adblock/etc/dnsmasq.d/: adblock.conf
dnsmasq-adblock/usr/local/etc/dnsmasq/adblock/: generate  hostslists.url  sanitise_hostlist.awk
dnsmasq-adblock/var/lib/dnsmasq/adblock/: generate  hostslists.url  process_hostslists.awk  sanitise_hostlist.awk
generic-zless-and-tar-a/etc/profile.d/: autotar.sh
ksmctl/etc/default/: ksm
ksmctl/etc/systemd/system/: ksm.service
ksmctl/usr/local/src/tarta-crust/ksmctl/: Makefile  main.rs
ksmctl/usr/src/tarta-crust/ksmctl/: Cargo.toml  main.rs
r710_fan_controller/etc/systemd/system/: r710_fan_controller.service
r710_fan_controller/usr/local/lib/systemd/system/: r710_fan_controller.service
r710_fan_controller/usr/local/libexec/: r710_fan_controller.sh
r710_fan_controller/usr/local/sbin/: r710_fan_controller.sh
rrd_graph/etc/cron.hourly/: rrd_graph_config.sh  rrd_graph_cpu  rrd_graph_df  rrd_graph_disk  rrd_graph_interface  rrd_graph_load  rrd_graph_memory
shared-config/etc/sudoers.d/: shared-config
shared-config/home/shared-config/: git-config  prepnew  pushbin
